--- a/index.html
+++ b/index.html
@@ -1,20 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Invite Form</title>
 
   <link rel="stylesheet" href="style/index.css">
-  
-  <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Leckerli+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Leckerli+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+    rel="stylesheet">
 
 </head>
+
 <body>
-  
+
+  <div id="app">
+
+    <aside>
+      <div class="aside-container">
+
+        <header>
+          <img src="assets/Logo.svg" alt="">
+          <h1>Festivite</h1>
+          <p>Crie um convite digital para o seu evento</p>
+        </header>
+
+      </div>
+    </aside>
+
+    <main>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis animi voluptates amet quibusdam natus,
+      reprehenderit placeat atque nihil explicabo dolor tenetur earum. Consequatur recusandae voluptatem nulla sint
+      harum iusto non?
+    </main>
+
+  </div>
+
 </body>
+
 </html>
