fixing the aside layout

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
   <div id="app">
 
     <aside>
-      <div class="aside-container">
 
         <header>
           <img src="assets/Logo.svg" alt="">
@@ -31,13 +30,21 @@
           <p>Crie um convite digital para o seu evento</p>
         </header>
 
-      </div>
     </aside>
 
     <main>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis animi voluptates amet quibusdam natus,
-      reprehenderit placeat atque nihil explicabo dolor tenetur earum. Consequatur recusandae voluptatem nulla sint
-      harum iusto non?
+      <div class="main-container">
+
+        <h1></h1>
+
+        <form action="" enctype="multipart/form-data">
+
+          <fieldset class="about-the-event">
+
+          </fieldset>
+
+        </form>
+      </div>
     </main>
 
   </div>
