redoing the layout of the aside section

--- a/index.html
+++ b/index.html
@@ -24,18 +24,25 @@
 
     <aside>
 
-        <header>
-          <img src="assets/Logo.svg" alt="">
-          <h1>Festivite</h1>
-          <p>Crie um convite digital para o seu evento</p>
-        </header>
+      <header>
+        <img src="assets/Logo.svg" alt="">
+
+        <div class="text">
+          <h1>
+            Festivite
+          </h1>
+          <p>
+            Crie um convite digital para o seu evento
+          </p>
+        </div>
+      </header>
 
     </aside>
 
     <main>
       <div class="main-container">
 
-        <h1></h1>
+        <h1>Crie seu convite</h1>
 
         <form action="" enctype="multipart/form-data">
 
