event name's done

--- a/index.html
+++ b/index.html
@@ -42,15 +42,32 @@
     <main>
       <div class="main-container">
 
-        <h1>Crie seu convite</h1>
+        <h1>
+          Crie seu convite
+        </h1>
 
         <form action="" enctype="multipart/form-data">
 
           <fieldset class="about-the-event">
 
+            <div class="head-form">
+              <img src="assets/mini-icons/calendar.png" alt="">
+              <legend>
+                Sobre o evento
+              </legend>
+            </div>
+
+            <div class="event-name">
+              <label for="event-name">
+              Título
+              </label>
+              <input id="event-name" name="event-name" type="text" placeholder="Nome do evento">
+            </div>
+
           </fieldset>
 
         </form>
+
       </div>
     </main>
 
