description field done

--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
               </div>
             </div>
 
+            <div class="description">
+              <label for="description">Descrição</label>
+              <input id="description" type="text" placeholder="Escreva os detalhes do evento">
+            </div>
+
           </fieldset>
 
         </form>
