customization field done

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 </head>
 
 <body>
-
   <div id="app">
+
+
 
     <aside>
 
@@ -122,13 +123,242 @@
 
           </fieldset>
 
+          <fieldset class="customization">
+            <div class="head-form">
+              <img src="assets/mini-icons/paintbrush-vertical.png" alt="">
+              <legend>
+                Personalização
+              </legend>
+            </div>
+
+            <div class="main-color">
+              <label>
+                Cor principal
+                <div class="color-range">
+
+                  <div class="wrapper">
+                    <label class="circle" for="">
+                      <div class="color color-1">
+                        <input type="radio">
+                      </div>
+                    </label>
+                  </div>
+
+                  <div class="wrapper">
+                    <label class="circle" for="">
+                      <div class="color color-2">
+                        <input type="radio">
+                      </div>
+                    </label>
+                  </div>
+
+                  <div class="wrapper">
+                    <label class="circle" for="">
+                      <div class="color color-3">
+                        <input type="radio">
+                      </div>
+                    </label>
+                  </div>
+
+                  <div class="wrapper">
+                    <label class="circle" for="">
+                      <div class="color color-4">
+                        <input type="radio">
+                      </div>
+                    </label>
+                  </div>
+
+                  <div class="wrapper">
+                    <label class="circle" for="">
+                      <div class="color color-5">
+                        <input type="radio">
+                      </div>
+                    </label>
+                  </div>
+
+                  <div class="wrapper">
+                    <label class="circle" for="">
+                      <div class="color color-6">
+                        <input type="radio">
+                      </div>
+                    </label>
+                  </div>
+
+                  <div class="wrapper">
+                    <label class="circle" for="">
+                      <div class="color color-7">
+                        <input type="radio">
+                      </div>
+                    </label>
+                  </div>
+
+                  <div class="wrapper">
+                    <label class="circle" for="">
+                      <div class="color color-8">
+                        <input type="radio">
+                      </div>
+                    </label>
+                  </div>
+
+                  <div class="wrapper">
+                    <label class="circle" for="">
+                      <div class="color color-9">
+                        <input type="radio">
+                      </div>
+                    </label>
+                  </div>
+
+                  <div class="wrapper">
+                    <label class="circle" for="">
+                      <div class="color color-10">
+                        <input type="radio">
+                      </div>
+                    </label>
+                  </div>
+
+                  <div class="wrapper">
+                    <label class="circle" for="">
+                      <div class="color color-11">
+                        <input type="radio">
+                      </div>
+                    </label>
+                  </div>
+
+                </div>
+              </label>
+            </div>
+
+            <div class="event-theme">
+              <label for="">
+                Tema do evento
+              </label>
+
+              <div class="grid wrapper-theme">
+                <div class="wrapper">
+                  <img src="assets/images/Image.png" alt="">
+                  <label>Aniversário</label>
+                  <input type="radio">
+                </div>
+
+                <div class="wrapper">
+                  <img src="assets/images/Image copy.png" alt="">
+                  <label>Infantil</label>
+                  <input type="radio">
+                </div>
+
+                <div class="wrapper">
+                  <img src="assets/images/Image (1).png" alt="">
+                  <label>Formatura</label>
+                  <input type="radio">
+                </div>
+
+                <div class="wrapper">
+                  <img src="assets/images/Image (2).png" alt="">
+                  <label>Casamento</label>
+                  <input type="radio">
+                </div>
+
+                <div class="wrapper">
+                  <img src="assets/images/Image (3).png" alt="">
+                  <label>Chá de bebê</label>
+                  <input type="radio">
+                </div>
+
+                <div class="wrapper">
+                  <img src="assets/images/Image (4).png" alt="">
+                  <label>Chá de panela</label>
+                  <input type="radio">
+                </div>
+
+                <div class="wrapper">
+                  <img src="assets/images/Image (5).png" alt="">
+                  <label>Carnaval</label>
+                  <input type="radio">
+                </div>
+
+                <div class="wrapper">
+                  <img src="assets/images/Image (6).png" alt="">
+                  <label>Páscoa</label>
+                  <input type="radio">
+                </div>
+
+                <div class="wrapper">
+                  <img src="assets/images/Image (7).png" alt="">
+                  <label>São João</label>
+                  <input type="radio">
+                </div>
+
+                <div class="wrapper">
+                  <img src="assets/images/Image (8).png" alt="">
+                  <label>Halloween</label>
+                  <input type="radio">
+                </div>
+
+                <div class="wrapper">
+                  <img src="assets/images/Image (9).png" alt="">
+                  <label>Natal</label>
+                  <input type="radio">
+                </div>
+
+                <div class="wrapper">
+                  <img src="assets/images/Image (10).png" alt="">
+                  <label>Outro</label>
+                  <input type="radio">
+                </div>
+
+
+              </div>
+            </div>
+
+            <div class="grid style-and-cover-photo">
+
+              <div class="style">
+                <label>Estilo</label>
+                <div class="grid style-light-dark">
+                  <div class="style-image"></div>
+                  <div class="style-text">Escuro</div>
+                </div>
+              </div>
+
+              <div class="cover-photo">
+                <label>Foto de capa
+
+                  <div class="wrapper-cover-photo">
+                    <label class="file-upload" for="file-upload"></label>
+                    <input id="file-upload" type="file">
+                    <label for="file-upload" class="button-upload">
+                      <img src="assets/mini-icons/upload.png" alt="">
+                      Selecionar
+                    </label>
+                  </div>
+                </label>
+              </div>
+            </div>
+
+
+          </fieldset>
+
+
+          <fieldset class="contact-info">
+
+            <div class="head-form">
+              <img src="assets/mini-icons/contact.png" alt="">
+              <legend>
+                Dados para contato
+              </legend>
+            </div>
+
+          </fieldset>
+
+
         </form>
 
       </div>
     </main>
 
-  </div>
 
+
+  </div>
 </body>
 
 </html>
