--- a/index.html
+++ b/index.html
@@ -348,6 +348,66 @@
               </legend>
             </div>
 
+            <label for="">
+              Nome
+              <input type="text" placeholder="Nome completo" required>
+            </label>
+
+            <div class="grid wrapper-email-contact">
+              <label for="">
+                E-mail
+                <input type="" placeholder="exemplo@email.com.com">
+              </label>
+
+              <label for="">
+                Telefone
+                <input type="text" placeholder="(99) 99999 9999">
+              </label>
+            </div>
+
+            <div class="grid terms">
+
+              <div class="grid wrapper-terms">
+
+                <div class="grid term">
+                  <div class="image-checkbox"></div>
+                  <label>
+                    <input type="checkbox">
+                    Li e concordo com os 
+                    <a href="https://www.rocketseat.com.br/">Termos e Condições
+                    </a> 
+                    e com a 
+                    <a href="https://www.rocketseat.com.br/">Política de Privacidade
+                    </a>
+                  </label>
+                </div>
+
+                <div class="grid term">
+                  <div class="image-checkbox"></div>
+                  <label>
+                    <input type="checkbox">
+                    Aceito receber atualizações e promoções por e-mail 
+                  </label>
+                </div>
+
+                <div class="grid term">
+                  <div class="image-checkbox"></div>
+                  <label>
+                    <input type="checkbox">
+                    Aceito receber atualizações e promoções por SMS
+                  </label>
+                </div>
+
+
+              </div>
+
+              <button type="submit">
+                <img src="/assets/mini-icons/ticket.png" alt="">
+                Gerar convite
+              </button>
+
+            </div>
+
           </fieldset>
 
 
