wrapping up the project with some layout tweaks

--- a/index.html
+++ b/index.html
@@ -338,7 +338,6 @@
 
           </fieldset>
 
-
           <fieldset class="contact-info">
 
             <div class="head-form">
@@ -348,7 +347,7 @@
               </legend>
             </div>
 
-            <label for="">
+            <label class="required-field" for="">
               Nome
               <input type="text" placeholder="Nome completo" required>
             </label>
@@ -356,7 +355,7 @@
             <div class="grid wrapper-email-contact">
               <label for="">
                 E-mail
-                <input type="" placeholder="exemplo@email.com.com">
+                <input type="email" placeholder="exemplo@email.com.com">
               </label>
 
               <label for="">
@@ -365,48 +364,48 @@
               </label>
             </div>
 
-            <div class="grid terms">
+          </fieldset>
 
-              <div class="grid wrapper-terms">
+          <fieldset class="grid terms">
 
-                <div class="grid term">
-                  <div class="image-checkbox"></div>
-                  <label>
-                    <input type="checkbox">
-                    Li e concordo com os 
-                    <a href="https://www.rocketseat.com.br/">Termos e Condições
-                    </a> 
-                    e com a 
-                    <a href="https://www.rocketseat.com.br/">Política de Privacidade
-                    </a>
-                  </label>
-                </div>
+            <div class="grid wrapper-terms">
 
-                <div class="grid term">
-                  <div class="image-checkbox"></div>
-                  <label>
-                    <input type="checkbox">
-                    Aceito receber atualizações e promoções por e-mail 
-                  </label>
-                </div>
-
-                <div class="grid term">
-                  <div class="image-checkbox"></div>
-                  <label>
-                    <input type="checkbox">
-                    Aceito receber atualizações e promoções por SMS
-                  </label>
-                </div>
-
-
+              <div class="grid term">
+                <div class="image-checkbox"></div>
+                <label>
+                  <input type="checkbox">
+                  Li e concordo com os 
+                  <a href="https://www.rocketseat.com.br/">Termos e Condições
+                  </a> 
+                  e com a 
+                  <a href="https://www.rocketseat.com.br/">Política de Privacidade
+                  </a>
+                </label>
               </div>
 
-              <button type="submit">
-                <img src="/assets/mini-icons/ticket.png" alt="">
-                Gerar convite
-              </button>
+              <div class="grid term">
+                <div class="image-checkbox"></div>
+                <label>
+                  <input type="checkbox">
+                  Aceito receber atualizações e promoções por e-mail 
+                </label>
+              </div>
+
+              <div class="grid term">
+                <div class="image-checkbox"></div>
+                <label>
+                  <input type="checkbox">
+                  Aceito receber atualizações e promoções por SMS
+                </label>
+              </div>
+
 
             </div>
+
+            <button type="submit">
+              <img src="/assets/mini-icons/ticket.png" alt="">
+              Gerar convite
+            </button>
 
           </fieldset>
 
